[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/nodes/Gui.gd" type="Script" id=1]
[ext_resource path="res://images/player/gui/bar_under.png" type="Texture" id=2]
[ext_resource path="res://images/player/gui/bar_over.png" type="Texture" id=3]
[ext_resource path="res://images/player/gui/bar_progress.png" type="Texture" id=4]
[ext_resource path="res://scripts/nodes/EnergyAmount.gd" type="Script" id=5]
[ext_resource path="res://images/player/gui/space_key.png" type="Texture" id=6]
[ext_resource path="res://resources/SwitchArrowAnimation.tres" type="Texture" id=7]
[ext_resource path="res://resources/Font.tres" type="DynamicFont" id=8]
[ext_resource path="res://images/player/gui/interact.png" type="Texture" id=9]
[ext_resource path="res://images/player/gui/mute.png" type="Texture" id=10]
[ext_resource path="res://resources/Theme.tres" type="Theme" id=11]
[ext_resource path="res://images/player/gui/restart.png" type="Texture" id=12]
[ext_resource path="res://images/player/gui/menu.png" type="Texture" id=13]

[node name="Gui" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Base" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyAmount" type="TextureProgress" parent="Base"]
margin_left = 20.0
margin_top = 20.0
margin_right = 506.0
margin_bottom = 61.0
max_value = 20.0
step = 0.05
texture_under = ExtResource( 2 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 0.0392157, 0.643137, 0.913725, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Base/EnergyAmount"]

[node name="FlickerTimer" type="Timer" parent="Base/EnergyAmount"]
wait_time = 0.2
one_shot = true

[node name="KeysMargin" type="MarginContainer" parent="Base"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -285.0
margin_top = -91.0
margin_right = 285.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeysContainer" type="HBoxContainer" parent="Base/KeysMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 560.0
margin_bottom = 81.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Space" type="MarginContainer" parent="Base/KeysMargin/KeysContainer"]
visible = false
margin_left = 101.0
margin_right = 355.0
margin_bottom = 71.0
theme = ExtResource( 11 )

[node name="SpaceBox" type="VBoxContainer" parent="Base/KeysMargin/KeysContainer/Space"]
margin_left = 10.0
margin_top = 10.0
margin_right = 244.0
margin_bottom = 61.0

[node name="SpaceLabel" type="Label" parent="Base/KeysMargin/KeysContainer/Space/SpaceBox"]
margin_right = 234.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 8 )
text = "Slow in mid air"

[node name="SpaceCenter" type="CenterContainer" parent="Base/KeysMargin/KeysContainer/Space/SpaceBox"]
margin_top = 21.0
margin_right = 234.0
margin_bottom = 51.0

[node name="SpaceKey" type="TextureRect" parent="Base/KeysMargin/KeysContainer/Space/SpaceBox/SpaceCenter"]
margin_right = 234.0
margin_bottom = 30.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Switch" type="MarginContainer" parent="Base/KeysMargin/KeysContainer"]
visible = false
margin_left = 298.0
margin_right = 416.0
margin_bottom = 71.0
theme = ExtResource( 11 )

[node name="SwitchBox" type="VBoxContainer" parent="Base/KeysMargin/KeysContainer/Switch"]
margin_left = 10.0
margin_top = 10.0
margin_right = 108.0
margin_bottom = 61.0

[node name="SwitchLabel" type="Label" parent="Base/KeysMargin/KeysContainer/Switch/SwitchBox"]
margin_right = 98.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 8 )
text = "Switch gravity"

[node name="SwitchCenter" type="CenterContainer" parent="Base/KeysMargin/KeysContainer/Switch/SwitchBox"]
margin_top = 21.0
margin_right = 98.0
margin_bottom = 51.0

[node name="SwitchKey" type="TextureRect" parent="Base/KeysMargin/KeysContainer/Switch/SwitchBox/SwitchCenter"]
margin_left = 35.0
margin_right = 62.0
margin_bottom = 30.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Interact" type="MarginContainer" parent="Base/KeysMargin/KeysContainer"]
visible = false
margin_left = 380.0
margin_right = 456.0
margin_bottom = 71.0
theme = ExtResource( 11 )

[node name="InteractBox" type="VBoxContainer" parent="Base/KeysMargin/KeysContainer/Interact"]
margin_left = 10.0
margin_top = 10.0
margin_right = 66.0
margin_bottom = 61.0

[node name="InteractLabel" type="Label" parent="Base/KeysMargin/KeysContainer/Interact/InteractBox"]
margin_right = 56.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 8 )
text = "Interact"

[node name="InteractCenter" type="CenterContainer" parent="Base/KeysMargin/KeysContainer/Interact/InteractBox"]
margin_top = 21.0
margin_right = 56.0
margin_bottom = 51.0

[node name="InteractKey" type="TextureRect" parent="Base/KeysMargin/KeysContainer/Interact/InteractBox/InteractCenter"]
margin_left = 14.0
margin_right = 41.0
margin_bottom = 30.0
texture = ExtResource( 9 )

[node name="Mute" type="MarginContainer" parent="Base/KeysMargin/KeysContainer"]
margin_left = 122.0
margin_right = 212.0
margin_bottom = 71.0
theme = ExtResource( 11 )

[node name="MuteBox" type="VBoxContainer" parent="Base/KeysMargin/KeysContainer/Mute"]
margin_left = 10.0
margin_top = 10.0
margin_right = 80.0
margin_bottom = 61.0

[node name="InteractLabel" type="Label" parent="Base/KeysMargin/KeysContainer/Mute/MuteBox"]
margin_right = 70.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 8 )
text = "Mute music"

[node name="InteractCenter" type="CenterContainer" parent="Base/KeysMargin/KeysContainer/Mute/MuteBox"]
margin_top = 21.0
margin_right = 70.0
margin_bottom = 51.0

[node name="InteractKey" type="TextureRect" parent="Base/KeysMargin/KeysContainer/Mute/MuteBox/InteractCenter"]
margin_left = 21.0
margin_right = 48.0
margin_bottom = 30.0
texture = ExtResource( 10 )

[node name="Restart" type="MarginContainer" parent="Base/KeysMargin/KeysContainer"]
margin_left = 216.0
margin_right = 327.0
margin_bottom = 71.0
theme = ExtResource( 11 )

[node name="MuteBox" type="VBoxContainer" parent="Base/KeysMargin/KeysContainer/Restart"]
margin_left = 10.0
margin_top = 10.0
margin_right = 101.0
margin_bottom = 61.0

[node name="RestartLabel" type="Label" parent="Base/KeysMargin/KeysContainer/Restart/MuteBox"]
margin_right = 91.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 8 )
text = "Restart level"

[node name="RestartCenter" type="CenterContainer" parent="Base/KeysMargin/KeysContainer/Restart/MuteBox"]
margin_top = 21.0
margin_right = 91.0
margin_bottom = 51.0

[node name="RestartKey" type="TextureRect" parent="Base/KeysMargin/KeysContainer/Restart/MuteBox/RestartCenter"]
margin_left = 32.0
margin_right = 59.0
margin_bottom = 30.0
texture = ExtResource( 12 )

[node name="Menu" type="MarginContainer" parent="Base/KeysMargin/KeysContainer"]
margin_left = 331.0
margin_right = 428.0
margin_bottom = 71.0
theme = ExtResource( 11 )

[node name="MenuBox" type="VBoxContainer" parent="Base/KeysMargin/KeysContainer/Menu"]
margin_left = 10.0
margin_top = 10.0
margin_right = 87.0
margin_bottom = 61.0

[node name="MenuLabel" type="Label" parent="Base/KeysMargin/KeysContainer/Menu/MenuBox"]
margin_right = 77.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 8 )
text = "Toggle Menu"

[node name="MenuCenter" type="CenterContainer" parent="Base/KeysMargin/KeysContainer/Menu/MenuBox"]
margin_top = 21.0
margin_right = 77.0
margin_bottom = 51.0

[node name="MenuKey" type="TextureRect" parent="Base/KeysMargin/KeysContainer/Menu/MenuBox/MenuCenter"]
margin_left = 25.0
margin_right = 52.0
margin_bottom = 30.0
texture = ExtResource( 13 )

[connection signal="timeout" from="Base/EnergyAmount/FlickerTimer" to="Base/EnergyAmount" method="_on_FlickerTimer_timeout"]
